Fix/cookies banner (#8)
* Cookie banner service name

* 0.1.8

* Remove cookies policy. Essential cookies only.

* Snyk ignore ReDos vulnerability

* Remove cookies tests

* Use 2/3 layout for cookies page

* Two thirds layout

* Back link

* Add snyk ignore reason

* Remove cookie policy and analytics

--- a/app/views/404.njk
+++ b/app/views/404.njk
@@ -1,13 +1,17 @@
-{% extends "_layout.njk" %}
+{% extends "two-thirds.njk" %}
 
-{% block content %}
-  <div class="govuk-width-container">
-    <div class="govuk-main-wrapper--auto-spacing">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-xl">Page not found</h1>
-        </div>
-      </div>
-    </div>
-  </div>
+{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+
+{% block beforeContent %}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "Home",
+        href: "/"
+      }]
+  }) }}
+{% endblock %}
+
+{% block twoThirds %}
+  <h1 class="govuk-heading-xl">Page not found</h1>
 {% endblock %}
