--- a/app/views/500.njk
+++ b/app/views/500.njk
@@ -1,14 +1,18 @@
-{% extends "_layout.njk" %}
+{% extends "two-thirds.njk" %}
 
-{% block content %}
-  <div class="govuk-width-container">
-    <div class="govuk-main-wrapper--auto-spacing">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
-          <p class="govuk-body">Try again later.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+{% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+
+{% block beforeContent %}
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "Home",
+        href: "/"
+      }]
+  }) }}
+{% endblock %}
+
+{% block twoThirds %}
+  <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
+  <p class="govuk-body">Try again later.</p>
 {% endblock %}
