--- a/app/views/form.njk
+++ b/app/views/form.njk
@@ -6,7 +6,8 @@
 
 {% block beforeContent %}
   {{ govukBackLink({
-    text: "Back"
+    text: "Back",
+    href: "javascript:history.back()"
   }) }}
 {% endblock %}
 
