Fix/optional county (#22)
* Update landing page content

* Fix time field label

* Use & export constants

* Validate date time is in the past

* Make county optional

* Format the date time on the email

* 0.1.21

* Fix failing test

* Reduce cognitive complexity

* Fix failing code analysis

* Add future date test

* Add test for incorrect time

* Fix linting

* Update future date test

* Fix typo on homepage

* No fail on NPM audit issues (axios advisories/GHSA-cph5-m8f7-6c5x)

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -18,7 +18,7 @@
   </p>
 
   <p class="govuk-body">
-    All reports are logged, and a unique reference number will be generated for each report. This number will be sent to you immediately after completion of this form, if you provide us with a valid email address.
+    All reports are logged, and a unique reference number will be generated for each report. This number will be sent to you within three working days after completion of this form, if you provide us with a valid email address.
   </p>
 
   {{ govukButton({
